--- a/source/templates/header.jade
+++ b/source/templates/header.jade
@@ -12,4 +12,4 @@
             |  Navigation
             
         li
-          a(href='https://github.com/thingsinjars/Hardy') Source
+          a(href='https://github.com/thingsinjars/hardy.io') Source
